# prevencaoFraudesPix

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  dev-requirements.txt  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: auto-fix-combined.yml  auto-fix-feature.yml  auto-fix-push.yml  auto-fix.yml  ci.yaml  quality.yml
data/: fraudes-pix.txt
data/assets/: prevencao-fraude-pix.md
docs/: relatorio_ceo.md  relatorio_cfo.md  relatorio_operacional.md
notebooks/: 01_eda.ipynb  02_feature_inspection.ipynb  03_threshold_analysis.ipynb
src/data/: schemas.py  simulate_transactions.py
src/features/: categorical.py  time_windows_polars.py  validators.py
src/modeling/: evaluate.py  inference.py  train_logreg.py  train_xgboost.py
src/pipelines/: build_dataset.py  train_and_eval.py
src/utils/: config.py  io.py  metrics.py
tests/: test_inference_latency.py  test_leakage_guards.py  test_time_windows.py
