[tool.poetry]
name = "prevencao-fraudes-pix"
version = "0.1.0"
description = "Sistema de prevenção de fraudes em Pix em tempo real"
authors = ["Sergio <seuemail@exemplo.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.0"
numpy = "^1.26.0"
scikit-learn = "^1.5.0"
xgboost = "^2.0.0"
lightgbm = "^4.3.0"
joblib = "^1.4.0"
pyarrow = "^15.0.0"
matplotlib = "^3.9.0"
seaborn = "^0.13.0"
pytest = "^8.0.0"
polars = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
