[tool.poetry]
name = "prevencao-fraudes-pix"
version = "0.1.0"
description = "Sistema de prevenção de fraudes em Pix em tempo real"
authors = ["Sergio <seuemail@exemplo.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.0"
numpy = "^1.26.0"
scikit-learn = "^1.5.0"
xgboost = "^2.0.0"
lightgbm = "^4.3.0"
joblib = "^1.4.0"
pyarrow = "^15.0.0"
matplotlib = "^3.9.0"
seaborn = "^0.13.0"
pytest = "^8.0.0"
polars = "^0.20.0"

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
ruff = "^0.6.0"
isort = "^5.13.0"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ============================
# Configuração do Black
# ============================
[tool.black]
line-length = 88
target-version = ["py312"]
skip-string-normalization = false
include = '\.pyi?$'
exclude = '''
(
  /(
      \.git
    | \.venv
    | build
    | dist
    | data
    | models
  )/
)
'''

# ============================
# Configuração do Ruff
# ============================
[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
    ".git",
    ".venv",
    "build",
    "dist",
    "data",
    "models",
]
# Seleção de regras (PEP8 + Pyflakes + Bugbear + isort)
select = ["E", "F", "W", "C90", "B", "I"]
ignore = ["E203", "W503"]  # compatível com Black

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

# ============================
# Configuração do Isort
# ============================
[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
skip = ["data", "models"]

# ============================
# Configuração do Mypy
# ============================
[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
